wp-content/themes/watchtower/assets/styles/layouts/_pages.scss
.content {
  background-color: #f4f7f5;
}

.jumbo-image {
  position: relative;
  margin-top: 20px;
  img {
    width: 100%;
  }
  .page-header {
    position: absolute;
    bottom: 20px;
    left: 38px;
  }
}

.page-template-default.home .wrap {
  padding: 0;
  .content {
    background-color: transparent;
    margin: 0;
    .main {
      padding: 0;
      .callout-container {
        position: relative;
        .main-callout {
          width: 875px;
          margin: 0 auto;
          color: #ffffff;
          background-color: rgba(34, 94, 55, 0.9);
          h1 {
            margin-top: 55px;
            margin-bottom: 10px;
          }
          p {
            color: #ffffff;
            font-size: 15px;
            line-height: 17px;
            max-width: 500px;
            margin: 0 auto;
            padding-bottom: 40px;
          }
          .btn-primary {
            transition: none;
            border: 2px solid #ffffff;
            color: #ffffff !important;
            min-width: 215px;
            margin: 0 8px 50px 0;
            &:last-child {
              margin-right: 0;
            }
          }
        }
      }
      .resident-link {
        position: relative;
        margin: 20px 10px 0 0;
        width: calc(50% - 10px);
        float: left;
        &.right {
          margin: 20px 0 0 10px;
        }
        .border {
          padding: 0 17px;
          h1 {
            margin: 0 0 3px;
            color: #ffffff;
            img {
              position: relative;
              top: -5px;
              max-width: 50px;
              margin: 0 15px;
            }
          }
          p {
            color: #ffffff;
            font-size: 15px;
            margin: 0 16px;
          }
        }
      }
    }
  }
}

.page-template-default {
  .banner-image {
    display: none;
  }
  .wrap {
    margin-top: 20px;
    .page-header {
      width: 100%;
      display: inline-block;
      text-align: center;
      padding: 15px 20px;
      background-color: $brand-primary;
    }
    .content {
      margin-bottom: 20px;
      padding-bottom: 20px;
      .main {
        padding: 25px 10px 0;
        img {
          margin: 0 auto;
        }
      }
    }
  }
}

.page-template-template-sidebar {
  .content {
    padding-top: 40px;
    margin-bottom: 20px;
    .main {
      padding: 0 40px;
    }
    .sidebar {
      padding: 0 4%;
    }
  }
}

.page-template-template-content-right {
  .page-header {
    background-color: $brand-primary;
    margin-top: 20px;
    padding: 15px 20px;
    text-align: center;
  }
  .content {
    .main {
      padding-top: 30px;
      .inner-image {
        margin-bottom: 25px;
      }
    }
  }
}

// Small devices (tablets, 768px and up)
@media only screen and (min-width: $screen-sm-min) {
  .jumbo-image {
    margin-top: 30px;
  }
  .page-template-default {
    .banner-image {
      display: block;
      background-repeat: no-repeat;
      background-position: center;
      height: 320px;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
    }
    .wrap {
      margin-top: 30px;
      &.has-thumbnail {
        padding-top: 0;
        margin-top: -205px;
      }
      .page-header {
        width: auto;
        min-width: 415px;
      }
      .content {
        margin-bottom: 40px;
        .main {
          min-height: 650px;
          .padding-left {
            padding-left: 20px;
          }
        }
      }
    }
  }
  .page-template-template-sidebar {
    .content {
      margin-bottom: 30px;
      .main {
        padding: 0 7% 0 40px;
        margin-bottom: 45px;
      }
    }
  }
  .page-template-template-content-right {
    .container-fluid {
      margin: 0 20px;
    }
    .form-group {
      margin: 0;
    }
    .page-header {
      min-height: 220px;
      margin: 0 -20px;
      padding: 0;
      text-align: left;
      h1 {
        padding-top: 45px;
      }
    }
    .content {
      background-color: transparent;
      margin-top: -115px;
      .main {
        padding: 0;
        .inner-image {
          margin-top: -70px;
          z-index: 1;
        }
        .inner-content {
          width: calc(50% + 60px);
          min-height: 600px;
          padding: 40px 40px 0 100px;
          background-color: #f4f7f5;
          margin: 0 0 40px -75px;
        }
      }
    }
  }

  .page-template-default.home .wrap {
    .content .main {
      .callout-container .main-callout {
        width: 600px;
        h1 {
          margin-top: 15px;
          margin-bottom: 10px;
        }
        p {
          padding-bottom: 15px;
        }
        .btn-primary {
          margin: 0 8px 15px 0;
        }
      }
    }
  }
}

// Medium devices (desktops, 992px and up)
@media only screen and (min-width: $screen-md-min) {
  .jumbo-image {
    margin-top: 40px;
  }
  .page-template-default {
    .wrap {
      margin-top: 40px;
      &.has-thumbnail {
        margin-top: -205px;
      }
    }
  }
  .page-template-template-sidebar {
    .content {
      margin-bottom: 40px;
    }
  }
  .page-template-template-content-right {
    .page-header {
      min-height: 320px;
    }
    .content {
      background-color: transparent;
      margin-top: -210px;
    }
  }
  .page-template-default.home .wrap {
    .content .main {
      .callout-container .main-callout {
        width: 875px;
        h1 {
          margin-top: 55px;
        }
        p {
          padding-bottom: 40px;
        }
        .btn-primary {
          margin: 0 8px 50px 0;
        }
      }
    }
  }
}

